# chat-over-kafka

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  chat_over_kafka.cpp  nativelib.cpp  nativelib.h
app/src/main/java/org/github/cyterdan/chat_over_kafka/: AudioMetadata.kt  KafkaMTLSHelper.kt  KafkaMessage.kt  MainActivity.kt  RdKafka.kt  RecordMetadata.kt  TimelineActivity.kt  TimelineManager.kt
app/src/main/java/org/github/cyterdan/chat_over_kafka/audio/: AudioService.kt  WaveformData.kt
app/src/main/java/org/github/cyterdan/chat_over_kafka/data/: KafkaConfig.kt  SettingsRepository.kt
app/src/main/java/org/github/cyterdan/chat_over_kafka/ui/: EqualizerVisualizer.kt  SettingsScreen.kt  SettingsViewModel.kt  SettingsViewModelFactory.kt  TimelineView.kt  WaveformVisualizer.kt
app/src/main/java/org/github/cyterdan/chat_over_kafka/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
docs/: AUDIO_PROCESSING.md  KAFKA_ON_ANDROID.md  KAFKA_TOPICS.md
gradle/wrapper/: gradle-wrapper.properties
provisioning/: main.tf  provision.sh
